[project]
name = "actovator-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docstring-parser>=0.17.0",
    "fastmcp>=2.13.1",
    "joblib>=1.5.2",
    "overrides>=7.7.0",
    "pathspec>=0.12.1",
    "psutil>=7.1.3",
    "sensai-utils>=1.6.0",
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
